k8s/alkfet-db-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alkfet-db-svc
  namespace: alkfet
  labels:
    app: alkfet-db-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alkfet-db-svc
  template:
    metadata:
      labels:
        app: alkfet-db-svc
    spec:
      containers:
        - name: alkfet-db-svc
          image: ghcr.io/norilskhu/alkfet-beadando/alkfet-db-svc:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: alkfet-db-svc
  namespace: alkfet
spec:
  selector:
    app: alkfet-db-svc
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
